Closed Bug 1550059 Opened 6 years ago Closed 6 years ago

Very frequent Android non-e10s dom/serviceworkers/test/test_self_update_worker.html | application crashed [@ RefPtr<mozilla::dom::(anonymous namespace)::AllowWindowInteractionHandler>::operator->() const + 0x2c] when Gecko 68 merges to Beta on 2019-05-07

Categories

(Core :: DOM: Service Workers, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox67.0.1 --- unaffected
firefox68 + fixed
firefox69 --- fixed

People

(Reporter: dluca, Assigned: perry)

References

Details

Crash Data

Attachments

(1 file)

Central as beta simulation:
https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception&revision=3597979ddc1bd3db4fae1575eecc83090459f6b5&selectedJob=245342624

Failure log:
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=245342624&repo=try&lineNumber=1461

Failure:
dom/serviceworkers/test/test_self_update_worker.html | application crashed [@ RefPtr<mozilla::dom::(anonymous namespace)::AllowWindowInteractionHandler>::operator->() const + 0x2c]

Can you please take a look at this bug?

Flags: needinfo?(overholt)

I don't know how this is failing in the "central as beta" simulation but that seems bad so please take a look, Perry :)

Flags: needinfo?(overholt) → needinfo?(perry)
Priority: -- → P1

Based on the treeherder log:

  • The crash occurs after a test completes (likely during shutdown)
  • The stack trace shows the crash occurs during a timer callback
  • The crash (i.e. stack frame 0) is due to a pointer dereference, where the pointer is nulled during shutdown

So, it seems like a race condition that can be prevented by either clearing the timer at the right time (or performing a null-check on the pointer).

Assignee: nobody → perry
Flags: needinfo?(perry)
Summary: Perma dom/serviceworkers/test/test_self_update_worker.html | application crashed [@ RefPtr<mozilla::dom::(anonymous namespace)::AllowWindowInteractionHandler>::operator->() const + 0x2c] when Gecko 68 merges to Beta on 2019-05-07 → Very frequent Android non-e10s dom/serviceworkers/test/test_self_update_worker.html | application crashed [@ RefPtr<mozilla::dom::(anonymous namespace)::AllowWindowInteractionHandler>::operator->() const + 0x2c] when Gecko 68 merges to Beta on 2019-05-07

Perry can this be landed?

Flags: needinfo?(perry)

(In reply to Andreea Pavel [:apavel] from comment #6)

Perry can this be landed?

It needs a review.

Flags: needinfo?(perry) → needinfo?(bugmail)
Crash Signature: [@ RefPtr<mozilla::dom::(anonymous namespace)::AllowWindowInteractionHandler>::operator->() const + 0x2c]

Patch landing enqueued.

Flags: needinfo?(bugmail)
Pushed by pjiang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/432bd29bd80c Clear ServiceWorker(Registration)Infos on shutdown. r=asuth
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

Mind requesting uplift to beta if appropriate?

Flags: needinfo?(perry)

Comment on attachment 9064157 [details]
Bug 1550059 - Clear ServiceWorker(Registration)Infos on shutdown. r?asuth

Beta/Release Uplift Approval Request

  • User impact if declined: Intermittent crash
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The patch isn't doing anything except cleaning things up that aren't expected to be used anymore after a certain point in the shutdown process.
  • String changes made/needed:
Flags: needinfo?(perry)
Attachment #9064157 - Flags: approval-mozilla-beta?

Comment on attachment 9064157 [details]
Bug 1550059 - Clear ServiceWorker(Registration)Infos on shutdown. r?asuth

serviceworker cleanup on shutdown, approved for 68.0b8

Attachment #9064157 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: