Bug 1550059 - Clear ServiceWorker(Registration)Infos on shutdown. r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D30716